--- a/day1/Introduction.ipynb
+++ b/day1/Introduction.ipynb
@@ -35,7 +35,7 @@
     "* Strength of its design: The syntax looks like pseudocode, and it is explicitly meant to be\n",
     "**clear, compact, and easy to read**.\n",
     "* This design philosophy is codified in PEP8 (the [Python style guide](https://www.python.org/dev/peps/pep-0008/)) and PEP20 (the [Zen of Python](https://www.python.org/dev/peps/pep-0020/)).\n",
-    "* General-purpose language that we can use in many areas: Prototyping e.g. Raspberry Pi, web app servers, scientific reserarch, data science, etc. \n",
+    "* General-purpose language that we can use in many areas: Prototyping e.g. Raspberry Pi, web app servers, scientific research, data science, etc.  \n",
     "\n",
     "#### Weekness \n",
     "\n",
@@ -48,6 +48,15 @@
     "* https://www.codecademy.com\n",
     "* [Python Cheat Sheet](http://sleet.aos.wisc.edu/~gpetty/wp/wp-content/uploads/2011/10/Python_qr.pdf)\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
