Finishing  if, for, missing while

--- a/Lessons/Getting_Started_With_Python.ipynb
+++ b/Lessons/Getting_Started_With_Python.ipynb
@@ -2329,6 +2329,67 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Nesting Lists\n",
+    "In python we can have data structures within data structures. e.g. A list inside a list.\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "my_second_list = [1, 2, 3, 4]\n",
+    "my_third_list = [5, 6, 7, 8]\n",
+    "my_fourth_list = [9, 10, 11, 12]\n",
+    "\n",
+    "# Make a list of lists to form a matrix\n",
+    "matrix = [my_second_list, my_third_list, my_fourth_list]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "# Show\n",
+    "matrix"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "# We can use idexing to get elements from the list, now we there are three levels for indexing.\n",
+    "matrix[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "# Getting the fisrt list with index 0 and then the third element of the list chosen.\n",
+    "matrix[0][2]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Basic Buil-in List Methods\n",
     "\n",
     "Lists in Python tend to be more flexible than arrays in other languages. They have no fixed size (meaning we don't have to specify how big a list will be), and they have no fixed type constraint (like we've seen above). We will see some common methods to manipulate lists."
@@ -2882,7 +2943,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "A __tuple__ is another sequence data type that is similar to the list. It consists of some values separated by commas and enclosed in parentheses () inseted of brackets like lists []. Unlike lists, tuples are immutable meaning they can not be changed or updated. You would use tuples to present things that should not be changed, such as days of the week, or dates on a calendar."
+    "A __tuple__ is another sequence data type that is similar to the list. It consists of some values separated by commas and enclosed in parentheses () instead of brackets like lists []. Unlike lists, tuples are immutable meaning they can not be changed or updated. You would use tuples to present things that should not be changed, such as days of the week, or dates on a calendar."
    ]
   },
   {
@@ -3168,7 +3229,7 @@
    "source": [
     "### When to us tuples?\n",
     "\n",
-    "Tuples are not used as often as lists in programming, but are useful when immutability is necessary. If  in your program you need to make sure an object does not get changed, then tuple become your solution. It provides a convenient source of data integrity."
+    "Tuples are not used as often as lists in programming but are useful when immutability is necessary. If  in your program you need to make sure an object does not get changed, then tuple become your solution. It provides a convenient source of data integrity."
    ]
   },
   {
