Finishing section of Functions

--- a/Lessons/Getting_Started_With_Python.ipynb
+++ b/Lessons/Getting_Started_With_Python.ipynb
@@ -1315,9 +1315,9 @@
    "source": [
     "### Basic Built-in String methods\n",
     "\n",
-    "A *method* is a function that “belongs to” an object, in this case, \"strings\" are the objects. In Python, the term method is not unique to class instances: other object types can have methods as well. For example, list objects have methods called append, insert, remove, sort, and so on.  \n",
+    "A *method* is a function that “belongs to” an object, in this case, \"strings\" are the objects. Another way to rephrase is that a method is an operation we can perform on the object (strings in ths case). In Python, the term method is not unique to class instances: other object types can have methods as well. For example, list objects have methods called append, insert, remove, sort, and so on.  \n",
     "\n",
-    "These methods are functions inside the object that can perform actions or commands on the object itself. We call methods with a period and then the method name, e.g. *object.method(parameters)*, with parameters as extra arguments that can be passed into the method. Don't worry if the details don't make 100% sense right now, when you get to practise it will.\n",
+    "These methods are functions inside the object that can perform actions or commands on the object itself. We call methods with a period and then the method name, e.g. **object.method(arg1,arg2,etc...)**, with parameters as extra arguments that can be passed into the method. Don't worry if the details don't make 100% sense right now, when you get to practise it will.\n",
     "\n",
     "Here we will see some of the basic built-in methods of the \"strings\" objects."
    ]
