--- a/Lessons/Object_Oriented_Programming.ipynb
+++ b/Lessons/Object_Oriented_Programming.ipynb
@@ -913,8 +913,25 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "[Source with more exmaples](http://www.jesshamrick.com/blog/)"
+    "[More exmaples](http://www.jesshamrick.com/blog/)\n",
+    "\n",
+    "[Jeff Knupp's Post](https://www.jeffknupp.com/blog/2014/06/18/improve-your-python-python-classes-and-object-oriented-programming/)\n",
+    "\n",
+    "[Mozilla's Post](https://developer.mozilla.org/en-US/Learn/Python/Quickly_Learn_Object_Oriented_Programming)\n",
+    "\n",
+    "[Tutorial's Point](http://www.tutorialspoint.com/python/python_classes_objects.htm)\n",
+    "\n",
+    "[Official Documentation](https://docs.python.org/2/tutorial/classes.html)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
