Finishing Numpy section

--- a/Lessons/Getting_Started_With_Python.ipynb
+++ b/Lessons/Getting_Started_With_Python.ipynb
@@ -3991,6 +3991,93 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Zip() function\n",
+    "\n",
+    "**zip()** makes a list(iterator) that aggregates elements from each of the iterables. Returns a list of tuples, where the i-th tuple contains the i-th element from each of the argument sequences or iterable."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "x = [1, 2, 3]\n",
+    "y = [4, 5, 6]\n",
+    "\n",
+    "# Zip the lists together\n",
+    "zip(x,y)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Note how tuples are returned. What if one iterable is longer than the other?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "x = [1, 2, 3]\n",
+    "y = [4, 5, 6, 7, 8]\n",
+    "\n",
+    "# Zip the lists together\n",
+    "zip(x, y)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**zip** is defined by the shortest iterable length. Its generally advised not to zip unequal length iterables unless your very sure you only need partial tuple pairings.\n",
+    "\n",
+    "What happens if we try to zip together dictionaries? Remember that dictionaries are not iterables, but zip will \"kind of\" iterate just over the keys."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "d1 = {'a': 1, 'b': 2}\n",
+    "d2 = {'c': 4,' d': 5}\n",
+    "\n",
+    "zip(d1, d2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We would have to call methods to mix keys and values:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "zip(d2,d1.itervalues())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "<a id=\"practise\"></a>\n",
     "\n",
     "# A quick practise!"
