--- a/Lessons/Script.ipynb
+++ b/Lessons/Script.ipynb
@@ -16,7 +16,7 @@
     "* We can write a program in our script like a recipe or installation of software. At the end of the day, a program is a __sequence__ of steps to be done in order.\n",
     "* Some of the steps can be __conditional__, that means that sometimes they can be skipped.\n",
     "* Sometimes a step or group of steps are to be __repeated__.\n",
-    "* Sometimes we store a set of steps that will be used over an over again in several parts of the program (__functions__).\n",
+    "* Sometimes we store a set of steps that will be used over and over again in several parts of the program (__functions__).\n",
     "\n",
     "__Note:__ Have a look on the code [style guide](https://www.python.org/dev/peps/pep-0008/#indentation) for a good coding practise. As a fist good practise, do not name files or folders with space in between: Awful! --> example 1.py; Great! --> __example_1.py, exampleOne.py, example_one.py__\n",
     "\n",
