Adding more details

--- a/Lessons/Matplotlib.ipynb
+++ b/Lessons/Matplotlib.ipynb
@@ -18,13 +18,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 85,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "# import\n",
+    "# import numpy\n",
     "import numpy as np\n",
     "# iporting the library\n",
     "import matplotlib.pyplot as plt\n",
@@ -394,7 +394,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We used ```plt.savefig``` to save the figures. The format of the image is deduced from the file name or can be given explicitly using format parameter, e.g., format=\"png\". For raster images,  to enhance quality you can also request particulat resolution in dots per inch using dpi parameter. This is useful when creating quality images for printing/publication. Vectorized images are supported, and you can save the file with extension SVG, EPS or PDF. "
+    "We used ```plt.savefig``` to save the figures. The format of the image is deduced from the file name or can be given explicitly using format parameter, e.g., format=\"png\". For raster images,  to enhance quality you can also request particular resolution in dots per inch using dpi parameter. This is useful when creating quality images for printing/publication. Vectorized images are supported, and you can save the file with extension SVG, EPS or PDF. "
    ]
   },
   {
@@ -418,10 +418,23 @@
   }
  ],
  "metadata": {
+  "anaconda-cloud": {},
   "kernelspec": {
    "display_name": "Python [conda root]",
    "language": "python",
    "name": "conda-root-py"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 2
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython2",
+   "version": "2.7.12"
   }
  },
  "nbformat": 4,
