--- a/Lessons/Numpy.ipynb
+++ b/Lessons/Numpy.ipynb
@@ -15,11 +15,18 @@
    "source": [
     "NumPy is fundamental Python library for scientific computing with support for large, multi-dimensional arrays and matrices, along with an extensive library of [high-level mathematical functions](https://docs.scipy.org/doc/numpy/reference/routines.math.html) to operate on these arrays.\n",
     "\n",
-    "In Python to import modules or libraries we do is as:\n",
-    "**import module_name**\n",
+    "In Python, there are libraries or modules that are not available by default. We need to import the library in our code to use it. To import, we use the following syntax: \n",
     "\n",
-    "if we wish we can give an alias name to the module:\n",
-    "** import module_name as alias**"
+    "**import library_name**\n",
+    "\n",
+    "If we want to give the library a nickname to shorten the command, we can do it as:\n",
+    "\n",
+    "** import library_name as nickNameHere**\n",
+    "\n",
+    "Each time we call a function that belongs to the library, we should do it a:\n",
+    "** library_name.FunctionName**\n",
+    "\n",
+    "The  (.) before the function name indicates to Python where to find the function. "
    ]
   },
   {
