Editing Presentation part

--- a/Lessons/Functions.ipynb
+++ b/Lessons/Functions.ipynb
@@ -11,7 +11,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "A **function is a block of organised, reusable code that is used to carry out a single, related action**. Functions provide better modularity for your application and a high degree of code reusing. They can also let us specify parameters that can serve as inputs to the functions. The concetp of function will also allow us to start thinking of program design. Defining part a function in Python is done using the ```def``` keyword:\n",
+    "A **function is a block of organised, reusable code that is used to carry out a single, related action**. Functions provide better modularity for your application and a high degree of code reusing. They can also let us specify parameters that can serve as inputs to the functions. The concept of function will also allow us to start thinking of program design. Defining part a function in Python is done using the ```def``` keyword:\n",
     "\n",
     "```python\n",
     "def name_of_function(arg1,arg2): # arg1, arg2 are optional arguments\n",
