--- a/Lessons/Introduction.ipynb
+++ b/Lessons/Introduction.ipynb
@@ -4,6 +4,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Python Workshop\n",
+    "\n",
+    "###  This workshop is oganiased for the Chemical Biology Winter School 2016 and given by the [Imperial College Advanced Hackspace](www.icah.org.uk).  \n",
+    "\n",
+    "<img src=\"../ICAH.png\" alt=\"jupyter\" style=\"width: 400px;\"/>\n",
+    "\n",
+    "### Instructor: [Dr. Ariadna Blanca Romero](starignus.github.io)\n",
+    "### email: ariadna@starignus.com \n",
+    "### Twitter: @starignus\n",
+    "\n",
+    "\n",
     "# Introduction\n",
     "\n",
     "Remember that you are intelligent and you can learn, but the computer is simple and very fast, but can not learn by itself. Therefore, in order for you to communicate instructions to the computer it is easier for you to learn a computer Language (e.g. Python) than for the computer to learn English.\n",
@@ -48,6 +59,15 @@
     "* https://www.codecademy.com\n",
     "* [Python Cheat Sheet](http://sleet.aos.wisc.edu/~gpetty/wp/wp-content/uploads/2011/10/Python_qr.pdf)\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
