--- a/Lessons/Script.ipynb
+++ b/Lessons/Script.ipynb
@@ -52,7 +52,7 @@
    "source": [
     "How to run it from the terminal:\n",
     "\n",
-    "1. You have to open your bash terminal or anaconda terminal in Windows.\n",
+    "1. You have to open your terminal in Linux/Mac or Anaconda terminal in Windows.\n",
     "2. You must be in the same directory where you saved the script\n",
     "3. Run as shown bellow:\n",
     "\n",
