Added Plot of Mathplotlib

--- a/Lessons/Introduction.ipynb
+++ b/Lessons/Introduction.ipynb
@@ -57,7 +57,8 @@
     "<img src=\"Books.png\" alt=\"jupyter\" style=\"width: 600px;\"/>\n",
     "\n",
     "* https://www.codecademy.com\n",
-    "* [Python Cheat Sheet](http://sleet.aos.wisc.edu/~gpetty/wp/wp-content/uploads/2011/10/Python_qr.pdf)\n"
+    "* [Python Cheat Sheet](http://sleet.aos.wisc.edu/~gpetty/wp/wp-content/uploads/2011/10/Python_qr.pdf)\n",
+    "* [Python Tutorial](https://www.tutorialspoint.com/python/index.htm)"
    ]
   },
   {
