--- a/Lessons/Matplotlib.ipynb
+++ b/Lessons/Matplotlib.ipynb
@@ -13,7 +13,12 @@
    "source": [
     "**Matplotlib** is a Python library use to visualise data. The ```toolbox matplotlib.pyplot``` is a collection of functions that make matplotlib work like MATLAB. In most cases, this is all that you will need to use, but there are many other useful tools in matplotlib that you should explore.\n",
     "\n",
-    "We will cover a few basic commands for formatting plots in this lesson. A resource for help styling your figures is the [matplotlib gallery](http://matplotlib.org/gallery.html), which includes plots in many different styles and the source code that creates them. The simplest plot is the 2-D line plot. These examples walk through the basic commands for making line plots using pyplots."
+    "We will cover a few basic commands for formatting plots in this lesson. A resource for help styling your figures is the [matplotlib gallery](http://matplotlib.org/gallery.html), which includes plots in many different styles and the source code that creates them. The simplest plot is the 2-D line plot. These examples walk through the basic commands for making line plots using pyplots.\n",
+    "\n",
+    "<img src=\"Histogram.png\" alt=\"jupyter\" style=\"width: 500px;\"/>\n",
+    "[Link to plot](http://matplotlib.org/examples/style_sheets/plot_bmh.html)\n",
+    "\n",
+    "More examples in: [Practical Computing for Biologist](http://people.duke.edu/~ccc14/pcfb/numpympl/MatplotlibBarPlots.html)"
    ]
   },
   {
