Adding notes to Introduction

--- a/Lessons/Getting_Started_With_Python.ipynb
+++ b/Lessons/Getting_Started_With_Python.ipynb
@@ -867,7 +867,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Creating and Printing String"
+    "### Creating and Printing Strings"
    ]
   },
   {
@@ -1449,11 +1449,6 @@
    "source": [
     "p"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
   },
   {
    "cell_type": "code",
@@ -4115,7 +4110,19 @@
    },
    "outputs": [],
    "source": [
-    "# Give two methods of producing the letter 'l' using indexing."
+    "# Give two methods of producing the letter 'l' using indexing.\n",
+    "#Method 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# Method 2"
    ]
   },
   {
