--- a/Lessons/Introduction.ipynb
+++ b/Lessons/Introduction.ipynb
@@ -52,11 +52,12 @@
     "\n",
     "* For one thing, Python is slower than a lower-level language (but keep in mind that this is a conscious tradeoff).\n",
     "\n",
-    "## Sources\n",
+    "## Resources\n",
     "\n",
     "<img src=\"Books.png\" alt=\"jupyter\" style=\"width: 600px;\"/>\n",
     "\n",
-    "* https://www.codecademy.com\n",
+    "* [Codecademy](https://www.codecademy.com)\n",
+    "* [Stack Overflow](stackoverflow.com/)\n",
     "* [Python Cheat Sheet](http://sleet.aos.wisc.edu/~gpetty/wp/wp-content/uploads/2011/10/Python_qr.pdf)\n",
     "* [Python Tutorial](https://www.tutorialspoint.com/python/index.htm)"
    ]
@@ -143,6 +144,17 @@
    "metadata": {},
    "source": [
     "The notebook autosaves your cahnges."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
+    "<img src=\"Jokexcsd.png\" alt=\"jupyter\" style=\"width: 500px;\"/>\n",
+    "\n",
+    "[xkcd](https://xkcd.com/353/)"
    ]
   },
   {
