--- a/Lessons/Functions.ipynb
+++ b/Lessons/Functions.ipynb
@@ -248,7 +248,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# A quick practise"
+    "# A quick practice!"
    ]
   },
   {
