--- a/Lessons/Getting_Started_With_Python.ipynb
+++ b/Lessons/Getting_Started_With_Python.ipynb
@@ -4075,7 +4075,7 @@
    "source": [
     "<a id=\"practise\"></a>\n",
     "\n",
-    "# A quick practise!"
+    "# A quick practice!"
    ]
   },
   {
@@ -4145,7 +4145,7 @@
    },
    "outputs": [],
    "source": [
-    "# Method 1"
+    "# Method 2"
    ]
   },
   {
@@ -4208,7 +4208,7 @@
    },
    "outputs": [],
    "source": [
-    "# Final Question: What is the boolean output of the cell block below?\n",
+    "# Final Question: What is the boolean output of the cell block below? Guess before running the code\n",
     "# two nested lists\n",
     "list_one = [5, 6,[7, 4]]\n",
     "list_two = [1,2,{'key':4}]\n",
