--- a/Lessons/Introduction.ipynb
+++ b/Lessons/Introduction.ipynb
@@ -66,7 +66,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# A quick tour of IPython Notebook"
+    "# A quick tour of Jupyter Notebook"
    ]
   },
   {
@@ -143,7 +143,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The notebook autosaves your cahnges."
+    "The notebook **autosaves** your cahnges."
    ]
   },
   {
