--- a/Lessons/Numpy.ipynb
+++ b/Lessons/Numpy.ipynb
@@ -1460,10 +1460,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Excerise:\n",
+    "# A quick practice!\n",
+    "\n",
     "1. Create a 3x3 identity matrix \n",
     "2. Create a 4x4x4 array with random values\n",
-    "3. Find A*B of tw matrices\n",
+    "3. Find A*B of the two matrices\n",
     "4. Multiply a 5x3 matrix by a 3x2 matrix (real matrix product)"
    ]
   },
