--- a/Lessons/Python_Statements.ipynb
+++ b/Lessons/Python_Statements.ipynb
@@ -823,7 +823,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# A quick practise!"
+    "# A quick practice!"
    ]
   },
   {
@@ -834,7 +834,7 @@
    },
    "outputs": [],
    "source": [
-    "#Use for, split(), and if to create a Statement that will print out words that start with 's'\n",
+    "# Use for, split(), and if to create a Statement that will print out words that start with 's'\n",
     "st = 'Print only the words that start with s in this sentence'"
    ]
   },
