Editing in the Lesson

--- a/Lessons/Introduction.ipynb
+++ b/Lessons/Introduction.ipynb
@@ -80,11 +80,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hi! This is a cell. Press the ▶ button above to run it\n"
+     ]
+    }
+   ],
    "source": [
     "print \"Hi! This is a cell. Press the ▶ button above to run it\""
    ]
@@ -100,18 +108,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " Hello\n"
+     ]
+    }
+   ],
    "source": [
-    "pr"
+    "print \" Hello\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -136,7 +152,7 @@
    },
    "outputs": [],
    "source": [
-    "pd.read_"
+    "pd.read_csv()"
    ]
   },
   {
