--- a/Lessons/Python_Statements.ipynb
+++ b/Lessons/Python_Statements.ipynb
@@ -70,11 +70,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "a is True!\n"
+     ]
+    }
+   ],
    "source": [
     "# Example of a simple statement\n",
     "\n",
@@ -85,11 +93,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "a is False\n"
+     ]
+    }
+   ],
    "source": [
     "# Adding more logic \n",
     "a = False \n",
@@ -101,11 +117,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Smaller\n",
+      "Finis\n"
+     ]
+    }
+   ],
    "source": [
     "x = 5\n",
     "if x < 10:\n",
@@ -124,11 +149,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Welcome to the school!\n"
+     ]
+    }
+   ],
    "source": [
     "# Let's see an example of a nested structure by comparing again variables.\n",
     "location = \"School\"\n",
@@ -189,11 +222,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[0, 1, 2, 3, 4, 5, 6, 7, 8, 9]"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Iterating through a list\n",
     "\n",
@@ -204,11 +248,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n",
+      "5\n",
+      "6\n",
+      "7\n",
+      "8\n",
+      "9\n"
+     ]
+    }
+   ],
    "source": [
     "for num in l:\n",
     "    print num"
@@ -216,11 +277,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0 It is an even number!\n",
+      "1 It is an odd number!\n",
+      "2 It is an even number!\n",
+      "3 It is an odd number!\n",
+      "4 It is an even number!\n",
+      "5 It is an odd number!\n",
+      "6 It is an even number!\n",
+      "7 It is an odd number!\n",
+      "8 It is an even number!\n",
+      "9 It is an odd number!\n"
+     ]
+    }
+   ],
    "source": [
     "# We can also include a condition to print even or odd numbers by using module from which we get the remainder\n",
     "for num in l:\n",
@@ -232,11 +310,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The sum is  45\n"
+     ]
+    }
+   ],
    "source": [
     "# Let's do a for loop to sum the itmes of the list\n",
     "sum_num = 0\n",
@@ -261,11 +347,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[11, 12, 13, 14, 15, 16, 17]"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Build a list comprehension by deconstructing a for loop within a []\n",
     "[x + 8 for x in l if x > 2]"
@@ -273,11 +370,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[0, 1, 2, 3, 4, 5, 6, 7, 8, 9]"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "l"
    ]
@@ -291,23 +399,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[[1, 2, 3], [4, 5, 6], [7, 8, 9]]"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# A nested list \n",
-    "nested_list = [[1, 2, 3], [4, 5, 6], [7, 8, 9]]"
+    "nested_list = [[1, 2, 3], [4, 5, 6], [7, 8, 9]]\n",
+    "nested_list"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1, 4, 7]"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Getting the first alement of every nested list (It is like a matrix 3x3)\n",
     "[row[0] for row in nested_list]"
@@ -322,11 +453,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n",
+      "5\n"
+     ]
+    }
+   ],
    "source": [
     "# Simple looping\n",
     "\n",
@@ -346,7 +489,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {
     "collapsed": true
    },
@@ -357,11 +500,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(6, 23)\n",
+      "<type 'tuple'>\n",
+      "(4, 28)\n",
+      "<type 'tuple'>\n",
+      "(1, 2)\n",
+      "<type 'tuple'>\n"
+     ]
+    }
+   ],
    "source": [
     "for tup in list_tup_example:\n",
     "    print tup\n",
@@ -370,15 +526,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "6 23\n",
+      "<type 'int'>\n",
+      "4 28\n",
+      "<type 'int'>\n",
+      "1 2\n",
+      "<type 'int'>\n"
+     ]
+    }
+   ],
    "source": [
     "# Now with unpacking!\n",
     "for (v1, v2) in list_tup_example:\n",
-    "    print v1\n",
+    "    print v1, v2\n",
     "    print type(v1)"
    ]
   },
@@ -391,7 +560,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {
     "collapsed": true
    },
@@ -402,11 +571,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "key3\n",
+      "key2\n",
+      "key1\n"
+     ]
+    }
+   ],
    "source": [
     "# Getting the keys (remember that a dictionary ys a mapping structure not a sequence)\n",
     "for item in dictinary_example:\n",
@@ -423,22 +602,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('key3', 3), ('key2', 2), ('key1', 1)]"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "dictinary_example.items()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "key3 3\n",
+      "key2 2\n",
+      "key1 1\n"
+     ]
+    }
+   ],
    "source": [
     "for key, value in dictinary_example.items():\n",
     "    print key, value"
@@ -462,11 +662,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<dictionary-itemiterator at 0x104494890>"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Creates a generator\n",
     "dictinary_example.iteritems()"
@@ -474,11 +685,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "key3 3\n",
+      "key2 2\n",
+      "key1 1\n"
+     ]
+    }
+   ],
    "source": [
     "# Create a generator\n",
     "for key, value in dictinary_example.iteritems():\n",
@@ -487,11 +708,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[3, 2, 1]"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# List comprenhension jut get key or value, not both\n",
     "[value for key, value in dictinary_example.iteritems()]"
@@ -499,22 +731,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['key3', 'key2', 'key1']"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "[key for key, value in dictinary_example.iteritems()]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['key3', 'key2']"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# We can also add a condition\n",
     "[key for key, value in dictinary_example.iteritems() if value >= 2]"
@@ -522,11 +776,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[32.0, 50.0, 68.18, 94.1]"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# A practical example, convert Celsius to Fahrenheit\n",
     "celsius = [0,10,20.1,34.5]\n",
