--- a/Lessons/Pandas.ipynb
+++ b/Lessons/Pandas.ipynb
@@ -15,7 +15,7 @@
     "\n",
     "For this lesson we will use public data from the [ Portal Project Teaching Database](https://figshare.com/articles/Portal_Project_Teaching_Database/1314459). The subset comes from Ernst *et al.* [Long-term monitoring and experimental manipulation of a Chihuahuan Desert ecosystem near Portal, Arizona, USA](http://www.esapubs.org/archive/ecol/E090/118/default.htm)\n",
     "\n",
-    "This section will use the **surveys.csv** file that it is already in this directory. It was downloaded from this [link](https://ndownloader.figshare.com/files/2292172). Note: *csv* stands  for comma separated format.  \n",
+    "This section will use the **surveys.csv** file that it is already in this directory. It was downloaded from this [link](https://ndownloader.figshare.com/files/2292172). Note: *csv* stands  for comma separated values.  \n",
     "\n",
     "The csv file contains the data of the study of species and weight of animals caught in plots in the study area mentioned above. Each row holds information for a single animal, and the columns represent:\n",
     "\n",
@@ -812,6 +812,7 @@
   }
  ],
  "metadata": {
+  "anaconda-cloud": {},
   "kernelspec": {
    "display_name": "Python [conda root]",
    "language": "python",
