--- a/Lessons/Numpy.ipynb
+++ b/Lessons/Numpy.ipynb
@@ -763,24 +763,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 222,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[10, 14,  8],\n",
-       "       [13, 24, 22],\n",
-       "       [16, 24, 16]])"
-      ]
-     },
-     "execution_count": 222,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "C = np.dot(A.T, B)\n",
     "C"
@@ -1149,6 +1136,17 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "w"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1431,6 +1429,28 @@
    "source": [
     "for i, j in zip(random_m,random_m_2):\n",
     "    print i, '+', j, '=', i + j"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "random_m"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "random_m_2"
    ]
   },
   {
