--- a/Lessons/Functions.ipynb
+++ b/Lessons/Functions.ipynb
@@ -232,15 +232,17 @@
     "    pi = 3.1416\n",
     "    'Function that calculates the area of a circle'\n",
     "    area = pi * radius ** 2\n",
-    "    return area\n",
+    "    print area\n",
+    "    #return area\n",
     "\n",
     "# Radious in cm\n",
     "list_radius = [1, 2, 3, 4, 5, 6]\n",
     "\n",
     "for radius in list_radius:\n",
-    "    area = area_circle(radius)\n",
-    "    print \"The area of a circle of radius \", radius, \"cm\"\n",
-    "    print \"cm is\", area, \"cm^2\"\n",
+    "    print (area_circle(radius))\n",
+    "    #area = area_circle(radius)\n",
+    "    #print \"The area of a circle of radius \", radius, \"cm\"\n",
+    "    #print \"cm is\", area, \"cm^2\"\n",
     "print \"Finished to calculate the areas of circles\""
    ]
   },
